<resources>
    <string name="app_name">MovieNight</string>
    <string name="test_synopsis">Normal People is an Irish romantic psychological drama limited series produced by Element Pictures for BBC Three and Hulu in association with Screen Ireland.</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="search_hint">Search for movie...</string>
    <string name="add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_title">Add title (Required)</string>
    <string name="add_synopsis">Add synopsis</string>
    <string name="attach_a_cover_photo">Attach a Cover photo</string>
    <string name="details">Details</string>
    <string name="browse_in_folder">Browse in folder</string>
    <string name="enter_link_or_keyword">Enter image link, or keyword (Required)</string>
    <string name="cover_photo">Cover photo</string>
    <string name="search_button">search button</string>
</resources>