<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivCoverPhoto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/normal_people_post_cover"
        app:layout_constraintHeight_percent=".40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvMovieDetail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-20dp"
        android:elevation="4dp"
        app:cardBackgroundColor="@color/pink_50"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivCoverPhoto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingTop="20dp">

            <LinearLayout
                android:id="@+id/llMovieHeadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="32sp"
                    tools:text="Normal People" />

                <TextView
                    android:id="@+id/tvAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    tools:text="Sally Rooney" />

                <TextView
                    android:id="@+id/tvYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    tools:text="2018" />
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="240dp"
                android:layout_height="0.25dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="24dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSynopsisDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="4sp"
                    tools:text="@string/test_synopsis" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/ivCoverPhoto"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="8dp"
        android:background="@color/transparent"
        android:orientation="vertical"
        android:elevation="8dp"
        >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLike"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingHorizontal="22dp"
                android:text="@string/like"
                app:cornerRadius="20dp"
                app:icon="@drawable/mdi_heart_outline"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnComment"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingHorizontal="22dp"
                android:text="@string/comment"
                app:cornerRadius="20dp"
                app:icon="@drawable/ep_chat"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingHorizontal="22dp"
                android:text="@string/save"
                app:cornerRadius="20dp"
                app:icon="@drawable/solar_bookmark_outline"/>
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>